--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "name": "Aluracord - Matrix (peas)",
+  "name": "Aluracord - Baratrix (bara)",
   "theme": {
     "colors": {
       "primary": {
-        "050": "#E3F9E5",
-        "100": "#C1EAC5",
+        "050": "#D6FBFF",
+        "100": "#99F5FF",
         "200": "#A3D9A5",
         "300": "#7BC47F",
         "400": "#57AE5B",
@@ -12,12 +12,12 @@
         "600": "#2F8132",
         "700": "#207227",
         "800": "#0E5814",
-        "900": "#05400A"
+        "900": "#00373D"
       },
       "neutrals": {
         "000": "#FFFFFF",
         "050": "#F5F7FA",
-        "100": "#E4E7EB",
+        "100": "#FF5714",
         "200": "#CBD2D9",
         "300": "#9AA5B1",
         "400": "#52667A",
